--- a/login.html
+++ b/login.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
-    <link rel="stylesheet" href="login-style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/login-style.css">
     <title>Iniciar sesion</title>
 </head>
 <body>
     <div class="login-page">
         <div id="alert"></div>
-        <div id="alertIntentos"></div>
+        <div id="view-attempts"></div>
         <div class="form">
             <form action="#" class="register-form" >
-                <input type="text" placeholder="Ingrese un Nombre" id="nuevousuario" required/>
-                <input type="password" placeholder="Ingrese nueva contraseña" id="nuevacontraseña" required/>
-                <input type="password" placeholder="Confirme contraseña" id="confirmacontra" required/>
-                <input type="text" placeholder="Correo electronico" id="correoelectronico" required/>
-                <button id="btncrearusuario" type="submit">Crear cuenta</button>
+                <input type="text" placeholder="Ingrese un Nombre" id="username" required/>
+                <input type="password" placeholder="Ingrese nueva contraseña" id="user-password" required/>
+                <input type="password" placeholder="Confirme contraseña" id="password-confirm" required/>
+                <input type="text" placeholder="Correo electronico" id="user-email" required/>
+                <button id="btnuserregister" type="submit">Crear cuenta</button>
                 <p class="message">Si ya te registraste <a href="#">inicia sesion</a></p>
             </form>
             <form action="#" class="login-form" >
-                <input type="text" placeholder="Nombre de usuario" id="usuario"/>
-                <input type="password" placeholder="contraseña" id="contraseña"/>
-                <button id="btniniciarsesion" >Iniciar sesion</button>
+                <input type="text" placeholder="Nombre de usuario" id="username-log"/>
+                <input type="password" placeholder="contraseña" id="password-log">
+                <button id="btnuserlogin" >Iniciar sesion</button>
                 <p class="message">Si no tienes cuenta crea <a href="#"> aqui</a></p>
             </form>
         </div>
     </div>    
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="login-main.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js" type="module"></script>
 </body>
 </html>
