--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/login-style.css">
-    <title>Iniciar sesion</title>
+    <title>Iniciar sesión</title>
 </head>
 <body>
     <div class="login-page">
@@ -21,9 +21,9 @@
                 <p class="message">Si ya te registraste <a href="#">inicia sesion</a></p>
             </form>
             <form action="#" class="login-form" >
-                <input type="text" placeholder="Nombre de usuario" id="username-log"/>
-                <input type="password" placeholder="contraseña" id="password-log">
-                <button id="btnuserlogin" >Iniciar sesion</button>
+                <input type="text" placeholder="Nombre de usuario" id="username-log" />
+                <input type="password" placeholder="Contraseña" id="password-log" required minlength="7">
+                <button id="btnuserlogin">Iniciar sesión</button>
                 <p class="message">Si no tienes cuenta crea <a href="#"> aqui</a></p>
             </form>
         </div>
